--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
          }
         .btn-block { display: block; width: 100%; }
         .btn-cta { /* Main CTA, Standard course button */
-            padding: 16px 32px; /* Adjusted padding slightly for longer text */
-            font-size: 1.05rem; /* Adjusted font size slightly */
-            line-height: 1.3; /* Added for multi-line text */
+            padding: 16px 32px;
+            font-size: 1.05rem;
+            line-height: 1.3;
             background: linear-gradient(135deg, var(--cyber-accent-cyan), #00b8d4);
             border: none; color: var(--cyber-bg-dark);
             box-shadow: 0 5px 25px rgba(0, 242, 234, 0.3);
@@ -116,7 +116,7 @@
             background: linear-gradient(135deg, #00e0c8, var(--cyber-accent-cyan));
             box-shadow: 0 8px 30px rgba(0, 242, 234, 0.4); transform: translateY(-4px);
         }
-        .btn .subtext { /* No longer used for main CTA button, but kept for general use */
+        .btn .subtext {
             display: block; font-size: 0.8em; font-weight: normal;
             opacity: 0.9; margin-top: 2px;
         }
@@ -189,22 +189,22 @@
             color: var(--cyber-accent-cyan); font-size: 1.2em;
         }
 
-        /* Urgency Notice Section (NEW) */
+        /* Urgency Notice Section */
         .urgency-notice-section {
             padding: 30px 20px;
-            margin: 30px auto 0; /* Placed after courses, before comparison */
+            margin: 30px auto 0;
             max-width: 700px;
             text-align: center;
         }
         .urgency-box {
-            background-color: rgba(230, 57, 70, 0.1); /* Error color, subtle bg */
+            background-color: rgba(230, 57, 70, 0.1);
             border: 2px dashed var(--error);
             border-radius: 10px;
             padding: 20px;
-            display: inline-block; /* Center the box */
+            display: inline-block;
             box-shadow: 0 0 15px rgba(230, 57, 70, 0.3);
         }
-        .urgency-box .icon-alert { /* Placeholder for an icon */
+        .urgency-box .icon-alert {
             font-size: 1.5em;
             color: var(--error);
             margin-right: 10px;
@@ -213,11 +213,11 @@
         .urgency-box p {
             font-size: 1.15rem;
             font-weight: 500;
-            color: var(--cyber-text-primary); /* Make text brighter */
+            color: var(--cyber-text-primary);
             margin: 0;
         }
         .urgency-box p strong {
-            color: var(--error); /* Error color for strong emphasis */
+            color: var(--error);
         }
 
         @keyframes blink-animation {
@@ -341,7 +341,7 @@
          .value-prop strong { color: var(--cyber-text-primary); }
 
         .course-card .button-wrapper { margin-top: auto; padding-top: 20px; }
-        .course-card.standard .btn { /* Standard's button now uses btn-cta styles directly or similar */
+        .course-card.standard .btn {
             padding: 16px 32px;
             font-size: 1.05rem;
             line-height: 1.3;
@@ -354,7 +354,6 @@
             background: linear-gradient(135deg, #00e0c8, var(--cyber-accent-cyan));
             box-shadow: 0 8px 30px rgba(0, 242, 234, 0.4); transform: translateY(-4px);
         }
-
 
         /* Table comparison */
         .table-container {
@@ -403,7 +402,7 @@
         .comparison-table tbody td:nth-child(3) strong { color: var(--cyber-accent-cyan); }
 
         .comparison-table tbody tr.highlight-row td {
-            background-color: var(--cyber-accent-purple-highlight-bg) !important; /* Override even striping */
+            background-color: var(--cyber-accent-purple-highlight-bg) !important;
             color: var(--cyber-text-primary);
             font-weight: 500;
             border-top: 1px solid var(--cyber-accent-purple-highlight-border);
@@ -575,7 +574,7 @@
              .answer::before { margin-left: -3em;}
              .final-cta { padding: 50px 20px;}
              .btn { padding: 12px 28px; font-size: 0.95rem;}
-             .btn-cta { padding: 12px 28px; font-size: 1rem; line-height: 1.4;} /* Mobile CTA text adjust */
+             .btn-cta { padding: 12px 28px; font-size: 1rem; line-height: 1.4;}
              .urgency-box { padding: 15px; }
              .urgency-box p { font-size: 1rem; }
         }
@@ -594,8 +593,8 @@
             .coupon-notice-container .coupon-title {font-size: 1.1rem;}
             .coupon-notice-container .coupon-code {font-size: 1.5rem;}
             .coupon-notice-container .coupon-benefit {font-size: 1rem;}
-            .btn { padding: 12px 20px; font-size: 0.9rem;} /* Smaller padding for general buttons */
-            .btn-cta { padding: 12px 22px; font-size: 0.95rem;} /* Specific adjust for CTA */
+            .btn { padding: 12px 20px; font-size: 0.9rem;}
+            .btn-cta { padding: 12px 22px; font-size: 0.95rem;}
             .comparison-table th, .comparison-table td { padding: 10px 8px; font-size: 0.85rem;}
             .urgency-box p { font-size: 0.95rem; }
          }
@@ -681,8 +680,8 @@
                         <span class="coupon-applied-info">クーポン【AITRADE】適用で永久50%OFF!</span>
                     </div>
                     <div class="button-wrapper">
-                        <a href="#payment-standard" class="btn btn-block btn-cta"> <!-- Reverted to btn-cta for consistency -->
-                            クーポンで得して<br>さらに14日間無料体験しちゃう！
+                        <a href="#payment-standard" class="btn btn-block btn-cta">
+                            クーポンで得して<br>さらに14日間無料体験！
                         </a>
                     </div>
                 </div>
@@ -713,13 +712,11 @@
             </div>
         </section>
 
-        <!-- Urgency Notice Section - NEW -->
         <section class="urgency-notice-section">
             <div class="urgency-box">
                 <p><span class="icon-alert">⚠️</span> クーポンは<strong>予告なく終了</strong>する場合があります。<br>この絶好のチャンスを<strong>お見逃しなく！</strong></p>
             </div>
         </section>
-        <!-- End Urgency Notice Section -->
 
         <section id="comparison" class="container">
             <h2>コース内容詳細比較</h2>
